[package]
name = "zwohash"
version = "0.1.0"
authors = ["Jannis Harder <me@jix.one>"]
edition = "2018"
description = "A fast, deterministic, non-cryptographic hash for use in hash tables"
readme = "README.md"
repository = "https://github.com/jix/zwohash/"
license = "MIT OR Apache-2.0"
keywords = ["hash"]
categories = ["algorithms", "no-std"]
include = ["LICENSE-MIT", "LICENSE-APACHE"]

[features]
default = ["std"]

std = []

[[bench]]
name = "bench"
harness = false

[dependencies]

[dev-dependencies]
criterion = "0.3.3"
rustc-hash = "1.1.0"
rand_pcg = "0.2.1"
rand = "0.7.3"
ordered-float = "2.0.0"


[profile.bench]
codegen-units = 1 # This reduces benchmarking variance a lot
